<?xml version="1.0"?>
<package format="3">
  <name>lakibeam1_driver</name>
  <version>0.0.1</version>
  <description>Driver Lakibeam 1 ROS2</description>

  <maintainer email="ikmalalais@gmail.com">you</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

